fix organization block spacing

--- a/assets/sass/_theme/sections/organizations.sass
+++ b/assets/sass/_theme/sections/organizations.sass
@@ -54,6 +54,8 @@
                     height: 100%
                     object-fit: contain
                     object-position: center
+        .blocks
+            margin-top: $spacing3
         .contacts-list
             @include list-reset
             padding-left: 0
